# chaturanga

./: .gitignore  Chaturanga.vpp  README.md  RELEASE_NOTES.txt  apresentacoes-2.txt  apresentacoes-3.txt  pyproject.toml  run.py  sketch-rules
.github/workflows/: python-app.yml
chaturanga/: __main__.py  board.py  errors.py  game.py  square.py
chaturanga/pieces/: __init__.py  ashwa.py  gaja.py  mitri.py  padati.py  piece.py  raja.py  ratha.py
chaturanga/ui/: board_widget.py  game_widget.py  main_window.py
docs/: Chaturanga.vpp  especificacao-requisitos.tex
imgs/: references.txt
tests/: test_win_conditions.py
ui/: board_widget.py  game_widget.py  main_window.py
